fix: admin nav styling overflow
fix: table toggle for those who haven't read

--- a/www/css/admin.css
+++ b/www/css/admin.css
@@ -5,7 +5,8 @@
 
 .nav-item {
   margin: 0 14px;
-  padding: 10px 21px;
+  padding: 10px 15px;
+  font-size: 1.3rem;
   border: none;
   background: none;
 }
